unpackaged/main/default/objects/bt_base__Blackthorn_Base_Settings__c/fields/bt_base__Auth_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Auth_Timestamp__c</fullName>
    <label>Auth Timestamp</label>
    <type>DateTime</type>
</CustomField>