unpackaged/main/default/objects/bt_base__Blackthorn_Base_Settings__c/fields/bt_base__Authorizing_User_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Authorizing_User_Id__c</fullName>
    <description>The Id of the user who authorized the app</description>
    <label>Authorizing User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>