unpackaged/main/default/objects/bt_base__Blackthorn_Base_Settings__c/fields/bt_base__OAuth_Completed__c.field-meta.xml
<CustomField>
    <fullName>bt_base__OAuth_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OAuth Completed</label>
    <type>Checkbox</type>
</CustomField>